terraform/aws/day27/alb.tf
resource "aws_lb" "app_lb" {
  name = "app-load-balancer-${var.environment}"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.alb_sg.id]
  subnets = aws_subnet.public[*].id

  enable_deletion_protection = false
  idle_timeout = 60

  tags = {
    Name = "app-load-balancer-${var.environment}"
  }
}

resource "aws_lb_target_group" "app_tg" {
  name = "aws-lb-target-group-${var.environment}"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.vpc.id
  target_type = "instance"
  
  health_check {
    path = "/"
    interval = 30
    timeout = 5
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
  tags = {
    Name = "aws-lb-target-group-${var.environment}"
  }
}

resource "aws_lb_listener" "http_listener" {
  load_balancer_arn = aws_lb.app_lb.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}
